--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.13",
     "@prisma/client": "^4.5.0",
     "crypto-js": "^4.1.1",
     "next": "12.3.1",
